﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.12...]
### 2018-01-14
	Added: Watchlist now has basic search function. Just start typing and it'll highlight anything that has matching names.
### 2018-01-13
	Added: Option to show adjust latency per item. This is not saved between restarts.
	Added: Handler for unhandled exceptions. Should write to crash log.
	Internal: Process tracking changed. Bugs may have been introduced.
	Internal: A lot of error catching added. Some non-errors might be caught now.
### 2018-01-12
	Changed: Stacktraces should no longer include project directory as it was not useful.
		Note: It would be preferable if the generated .pbd didn't have it instead.
	Added: Modify latency display to the UI.
	Internal: Lots of code changes to how process handling happens. Something may have broke.
	Added: Better cleanup after process exit.
	Fixed: Rule-based power mode changes were not being applied properly.
	Changed: Exit is not less redundant. Maybe slightly faster as such, too?
	Added: `Unique crash logs´ option in [Logging] in Core.ini.
	Added: Programmatically disable WER dialogs for TM.
		Microsoft does not communicate with me about what WER sends to them, so whyyyy would I want that?
### 2018-01-11
	Added: Monitor power off time and percentage is now shown at end of session unlock.
### 2018-01-10
	Added: Path visibility can now be changed in UI now.
### 2018-01-09
	Internal: Various readability improvements.
	Added: Experimental feature to restart explorer.exe when it crashes. Disabled by default.
		`Explorer Restart=seconds´ in Core.ini [Experimental] section.
	Fixed: Component configuration was not showing current values correctly.
	Changed: UI has received several changes. Things may be broken now.
	Added: Path Visibility option now has -1 (Process) and 4 (Partial) options.
### 2018-01-08
	Added: Memory pressure display on info tab. 100% or over is bad, mkay?