@@ -687,7 +687,7 @@ namespace Taskmaster
 				if (bpriot >= 0) bprio = ProcessHelpers.IntToPriority(bpriot);
 
 				PathVisibilityOptions pvis = PathVisibilityOptions.Process;
-				pvis = (PathVisibilityOptions)(section.TryGet("Path visibility")?.IntValue.Constrain(-1, 4) ?? -2);
+				pvis = (PathVisibilityOptions)(section.TryGet("Path visibility")?.IntValue.Constrain(-1, 3) ?? 0);
 
 				string[] tignorelist = (section.TryGet(HumanReadable.Generic.Ignore)?.StringValueArray ?? null);
 				if (tignorelist != null && tignorelist.Length > 0)
