@@ -3,8 +3,12 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.12...]
-### 2018-01-14
+### 2018-01-14 PARTIALLY INCOMPATIBLE CONFIG
 	Added: Watchlist now has basic search function. Just start typing and it'll highlight anything that has matching names.
+	Changed: Path visibility File and Folder options removed.
+		The IDs used now match Invalid and Partial respectively. No automatic conversion in place.
+		Old partial matching will reset to default: automatic selection of process or partial.
+	Changed: Smart path visibility should be "smarter".
 ### 2018-01-13
 	Added: Option to show adjust latency per item. This is not saved between restarts.
 	Added: Handler for unhandled exceptions. Should write to crash log.
